# memoire-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README.txt  build_vs.bat  build_vs_debug.bat  build_vs_release.bat  download_deps.bat  download_file.bat  extract_deps.bat  generate_cmake.bat  generate_cmake_vs2017x64.bat  generate_cmake_vs2017x86.bat  generate_default.bat  generate_default_vs2017x64.bat  generate_default_vs2017x86.bat  setup.bat  updatesubs.bat
editor/: files.txt
engine/: CMakeLists.txt
engine-tests/: CMakeLists.txt
engine-tests/src/: main.cpp
engine/Engine/AssetManagement/: Asset.h  AssetLoader.cpp  AssetLoader.h  AssetManager.cpp  AssetManager.h  AudioClip.cpp  AudioClip.h  AudioClipLoader.cpp  AudioClipLoader.h  Font.cpp  Font.h  FontLoader.cpp  FontLoader.h  JSON.cpp  JSON.h  JSONLoader.cpp  JSONLoader.h  Shader.cpp  Shader.h  ShaderLoader.cpp  ShaderLoader.h  Sprite.cpp  Sprite.h  SpriteLoader.cpp  SpriteLoader.h  SpriteRenderer.cpp  SpriteRenderer.h  Tilemap.cpp  Tilemap.h
engine/Engine/Core/: Audio.cpp  Audio.h  Context.cpp  Context.h  FileUtility.cpp  FileUtility.h  Input.cpp  Input.h  LuaManager.cpp  LuaManager.h  Physics.cpp  Physics.h  Physics2D.cpp  Physics2D.h  Renderer.cpp  Renderer.h  World.cpp  World.h  WorldManager.cpp  WorldManager.h
engine/Engine/Data/: AseData.h  IndexTypes.cpp  IndexTypes.h  Memory.h  RectTransform.cpp  RectTransform.h  SpriteData.h  SpriteVertex.cpp  SpriteVertex.h  Transform.cpp  Transform.h  UniformTypes.cpp  UniformTypes.h  VertexTypes.cpp  VertexTypes.h
engine/Engine/IMGUI/: DebugEditor.cpp  DebugEditor.h  ImguiUtilities.cpp  ImguiUtilities.h  LuaEditor.cpp  LuaEditor.h  WorldEditor.cpp  WorldEditor.h  imgui_bgfx.cpp  imgui_bgfx.h
engine/Engine/Nodes/: AudioSource.cpp  AudioSource.h  Body.cpp  Body.h  Body2D.cpp  Body2D.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  DynamicBody2D.cpp  DynamicBody2D.h  KinematicBody2D.cpp  KinematicBody2D.h  Node.cpp  Node.h  Node2D.cpp  Node2D.h  Sprite.cpp  Sprite.h  SpriteRenderer.cpp  SpriteRenderer.h  StaticBody2D.cpp  StaticBody2D.h  TextRenderer.cpp  TextRenderer.h  TilemapRenderer.cpp  TilemapRenderer.h  UIButton.cpp  UIButton.h
engine/Engine/Physics2D/: Body2D.cpp  Body2D.h  Collision2D.h  Physics2D.cpp  Physics2D.h
engine/Engine/Tools/: aseprite.cpp  imgui_bgfx.cpp  imgui_bgfx.h
engine/Engine/UI/: Button.cpp  Button.h  Image.cpp  Image.h  NodeUI.cpp  NodeUI.h  Text.cpp  Text.h
engine/Engine/Utilities/: Debug.cpp  Debug.h  DebugMemory.h  FileReader.cpp  FileReader.h  ObjectFactory.cpp  ObjectFactory.h  Timer.cpp  Timer.h  TypeConversion.cpp  TypeConversion.h  glmJson.h
engine/GoldEngine/Core/: Context.cpp  Context.h  FileUtility.cpp  FileUtility.h  Input.cpp  Input.h  Physics.cpp  Physics.h  Renderer.cpp  Renderer.h
engine/GoldEngine/Data/: AseData.h  PhysicsData.h  SpriteData.h
engine/GoldEngine/Tools/: aseprite.cpp  aseprite.h  asepriteChunks.cpp  asepriteChunks.h
engine/GoldEngine/Utilities/: Timer.cpp  b2dtoSDL.h
fish/: CMakeLists.txt
fish/assets/worlds/: fishworld.world  testworld.world
fish/src/: collision.h  fish.cpp  fish.h  fishData.h  fishKiller.cpp  fishKiller.h  fishSpawner.cpp  fishSpawner.h  fishSpawnerManager.cpp  fishSpawnerManager.h  hook.cpp  hook.h  main.cpp  net.cpp  net.h  obstacle.cpp  obstacle.h  playerController.cpp  playerController.h  worldEditor.cpp  worldEditor.h
game/: CMakeLists.txt  Texture.h  main.cpp
game/assets/: ayse.aseprite  background.aseprite  sprite.aseprite
game/assets/fonts/: OFL.txt
game/src/: Texture.cpp  main.cpp
librarian/: CMakeLists.txt  config.json  node.json  test.json  worldTest.json
librarian/assets/: characters.json
librarian/assets/dialogue/: .dialogue  Test2.dialogue  Test2eeeee.dialogue  test.dialogue  test_wack.dialogue
librarian/assets/fonts/: README.txt
librarian/assets/worlds/: game.lua  game.world  mainmenu.lua  mainmenu.world  test.lua  test.world  test2.lua  test2.world  untitled.world  untitledTest.world
librarian/dialogue/: test.json
librarian/dialouge/: test.json
librarian/src/: DialogueWriter.cpp  DialogueWriter.h  main.cpp
librarian/src/assetmanagement/: Dialogue.cpp  Dialogue.h  DialogueLoader.cpp  DialogueLoader.h
librarian/src/core/: luabindings.cpp  luabindings.h
librarian/src/imgui/: DialogueEditor.cpp  DialogueEditor.h  ImguiUtilities.h  LuaEditor.cpp  WorldEditor.cpp  WorldEditor.h
librarian/src/nodes/: DialogueWriter.cpp  DialogueWriter.h
test/: CMakeLists.txt
test/src/: Texture.cpp  Texture.h  main.cpp
test_bgfx/: CMakeLists.txt
test_bgfx/src/: main.cpp
tools/: compile-d3d.bat  compile-opengl-line.bat  compile-opengl-set.bat  compile-opengl.bat  compile-test.bat  compile.bat  fs_cubes.sc  vs_cubes.sc
tools/cube/: fs_cubes.bin.hlsl  fs_cubes.sc  vs_cubes.bin.hlsl  vs_cubes.sc
tools/font/: fs_font.sc  vs_font.sc
tools/image/: fs_image.sc
tools/line/: fs_line.sc  vs_line.sc
tools/scale/: fs_scale.sc
tools/sprite/: fs_sprite.sc  varying.def.sc  vs_sprite.sc
tools/src/cube/: vs_cubes.sc
tools/src/image/: vs_image.sc
tools/src/scale/: fs_scale.sc
tools/src/sprite/: fs_sprite.sc  vs_sprite.sc
tools/src/ui/: fs_ui.sc
tools/tile/: fs_tile.sc  varying.def.sc  vs_tile.sc
tools/ui/: fs_ui.sc  vs_ui.sc
tools/uisprite/: fs_uisprite.sc  vs_uisprite.sc
